--- a/tPX/public/css/modal.css
+++ b/tPX/public/css/modal.css
@@ -44,6 +44,12 @@ span.closeBtn {
     overflow-y: none;
 }
 
+@media only screen and (max-width: 500px) {
+    .modal-content {
+        position: fixed;
+    }
+}
+
 /* Medium screens */
 @media only screen  and (min-width : 799px) {
     span.closeBtn {
